@@ -187,10 +187,12 @@ sub local_annotations ($state) {
 # shorthand for finding the canonical uri of the present schema location
 # last argument can be an arrayref, usually coming from $state->{_schema_path_suffix}
 sub canonical_uri ($state, @extra_path) {
+  return $state->{initial_schema_uri} if not length($state->{schema_path}) and not @extra_path;
   splice(@extra_path, -1, 1, $extra_path[-1]->@*) if @extra_path and is_plain_arrayref($extra_path[-1]);
   my $uri = $state->{initial_schema_uri}->clone;
-  $uri->fragment(($uri->fragment//'').jsonp($state->{schema_path}, @extra_path));
-  $uri->fragment(undef) if not length($uri->fragment);
+  my $fragment = ($uri->fragment//'').(@extra_path ? jsonp($state->{schema_path}, @extra_path) : $state->{schema_path});
+  undef $fragment if not length($fragment);
+  $uri->fragment($fragment);
   $uri;
 }
 
