@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - some performance optimizations for schema traversal and evaluation
 
 0.555     2022-09-10 21:43:11Z
           - the "iri-reference" format is now supported, sort of (all strings
